TDD: Test-Driven Development Process

--- a/tdd-overview.html
+++ b/tdd-overview.html
@@ -12,7 +12,13 @@
     </li>
     <li>The test might fail as the tests are developed even before the devleopment</li>
     <li>The development team develops and refactors the code to pass the tests</li>
-    <li>Test-driven development is related to the test first programming evolved as part of extreme programming concecpts</li>
+    <li>Test-driven development is related to the test first programming evolved as part of extreme programming concepts</li>
 </ul>
+<h2>Test-Driven Development Process</h2>
+<ul><li>Add a test</li>
+<li>Run All test and see if the new one failes</li>
+<li>Write some code</li>
+<li>Run tests and refactor code</li>
+<li>Repeat</li></ul>
 </body>
 </html>
